fix: change wrapping in header-upper

--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,7 @@
 .header-upper {
   justify-content: space-between;
   align-items: center;
+  gap: 10px;
   padding: 24px 0px;
 }
 
